# status_dwarf

./: .editorconfig  .eslintrc.json  .gitignore  Dockerfile  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: check_i18n_base.yml  lint.yml  migrations.yml  test.yml
scripts/: check_i18n_base.py  gen_i18n_base.py
status_dwarf/: __init__.py  commands.py  config.py  models.py  monitor.py  utils.py  views.py
status_dwarf/config/: config.md  config_base.json
status_dwarf/i18n/: i18n_base.json
status_dwarf/static/css/: fonts.css  style.css
status_dwarf/static/js/: datetime.js
status_dwarf/templates/: atom.xml  error.html  generic.html  index.html
tests/: test_commands.py  test_models.py  test_monitor.py  test_utils.py  test_views.py  utils.py
