[project]
name = "status_dwarf"
description = "A simple uptime status page."
license = { file = "LICENSE" }
readme = "README.md"
authors = [
    { name = "Cosmic Process" }
]
dependencies = [
    "flask",
    "flask-sqlalchemy",
    "flask-migrate",
    "flask-apscheduler",
    "httpx",
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["status_dwarf"]
